--- a/iv_datascience.ipynb
+++ b/iv_datascience.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "id": "18c17a1d",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "id": "97c65bf1-1566-48b0-ae61-e7ead90a936f",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "id": "b6316dad-3dc8-4a75-87a2-0df7f3ef25fb",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
        "4  37.75015 -122.39256          0  1213084237  new_abboip"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,12 +182,13 @@
     "\n",
     "print(\"Loaded cabs:\", df[\"cab_id\"].nunique())\n",
     "print(\"Total GPS points:\", len(df))\n",
-    "df.head()\n"
+    "df.head()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "id": "13deec9d-8b2b-4f3d-98e7-e64cb83e0a3c",
    "metadata": {},
    "outputs": [
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "id": "b3ea52be-e315-40ec-b652-a23201928952",
    "metadata": {},
    "outputs": [
@@ -313,7 +314,7 @@
        "4  37.75015 -122.39256          0  1213084237  new_abboip  3775_-12240"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "id": "9fb3538f-b6d9-45ed-ab7f-8693d95b28a4",
    "metadata": {},
    "outputs": [],
@@ -396,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "952afa0b-3e9f-49fe-8db5-b1e24f9016da",
    "metadata": {},
    "outputs": [
@@ -494,7 +495,7 @@
        "535  new_uvreoipy          5.977987"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "id": "69cb1a68",
    "metadata": {},
    "outputs": [
@@ -565,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "id": "81766343",
    "metadata": {},
    "outputs": [
