--- a/iv_datascience.ipynb
+++ b/iv_datascience.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "## Dataset Description\n",
     "\n",
-    "The dataset contains GPS movement records of Yellow Cab taxis in San Francisco collected from the Cabspotting Project. Each taxi is equipped with a GPS device that records its location, passenger status, and time, with each record stored as latitude, longitude, occupancy (1 = occupied, 0 = free), and UNIX time. This dataset is suitable for analyzing taxi movement patterns and urban mobility behavior."
+    "The dataset contains GPS movement records of Yellow Cab taxis in San Francisco collected from the Cabspotting Project. Each taxi is equipped with a GPS device that records its location, passenger status, and time, with each record stored as latitude, longitude, occupancy (1 = occupied, 0 = free), and UNIX time. This dataset is suitable for analyzing taxi movement patterns and urban mobility behavior"
    ]
   },
   {
