--- a/iv_datascience.ipynb
+++ b/iv_datascience.ipynb
@@ -615,15 +615,15 @@
     "\n",
     "### 1.Personalized Mobility Services\n",
     "User segmentation based on location entropy can be used to personalize transport\n",
-    "recommendations and location-based services.\n",
+    "recommendations and location-based services\n",
     "\n",
     "### 2.Anomaly Detection\n",
     "Sudden changes in entropy can serve as signals for detecting fraud, device sharing,\n",
-    "or abnormal operational behavior.\n",
+    "or abnormal operational behavior\n",
     "\n",
     "### 3.Urban Planning\n",
     "Aggregated entropy metrics can help city planners identify highly dynamic regions\n",
-    "and optimize transportation infrastructure.\n"
+    "and optimize transportation infrastructure\n"
    ]
   },
   {
@@ -633,7 +633,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "This study demonstrates how location entropy can be used to quantify user mobility behavior in spatio-temporal data. Location entropy proves to be a valuable feature for mobility analysis, user segmentation, and data-driven product development."
+    "This study demonstrates how location entropy can be used to quantify user mobility behavior in spatio-temporal data. Location entropy proves to be a valuable feature for mobility analysis, user segmentation, and data-driven product development"
    ]
   },
   {
