--- a/iv_datascience.ipynb
+++ b/iv_datascience.ipynb
@@ -599,11 +599,11 @@
     "## Insights\n",
     "\n",
     "### 1.Mobility-Based Segmentation\n",
-    "Location entropy can be used to segment users into routine, semi-flexible, and highly mobile groups.\n",
+    "Location entropy can be used to segment users into routine, semi-flexible, and highly mobile groups\n",
     "\n",
     "### 2.Behavioral Change Detection\n",
     "Significant changes in entropy over time may indicate abnormal behavior, operational changes,\n",
-    "or external events affecting user mobility.\n"
+    "or external events affecting user mobility\n"
    ]
   },
   {
