--- a/iv_datascience.ipynb
+++ b/iv_datascience.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "The objective of this analysis is to calculate location entropy for each user in a real-world mobility dataset, extract meaningful insights, and propose potential product ideas based on these insights. Location entropy measures the diversity of a user’s movement by examining how frequently they visit different locations. A higher entropy value indicates more diverse movement patterns, while a lower value suggests routine or localized behavior.\n"
+    "The objective of this analysis is to calculate location entropy for each user in a real-world mobility dataset, extract meaningful insights, and propose potential product ideas based on these insights. Location entropy measures the diversity of a user’s movement by examining how frequently they visit different locations. A higher entropy value indicates more diverse movement patterns, while a lower value suggests routine or localized behavior\n"
    ]
   },
   {
