--- a/iv_datascience.ipynb
+++ b/iv_datascience.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "The objective of this analysis is to calculate location entropy for each user in a real-world mobility dataset, extract meaningful insights, and propose potential product ideas based on these insights. Location entropy measures the diversity of a user’s movement by examining how frequently they visit different locations. A higher entropy value indicates more diverse movement patterns, while a lower value suggests routine or localized behavior.\n"
+    "The objective of this analysis is to calculate location entropy for each user in a real-world mobility dataset, extract meaningful insights, and propose potential product ideas based on these insights. Location entropy measures the diversity of a user’s movement by examining how frequently they visit different locations. A higher entropy value indicates more diverse movement patterns, while a lower value suggests routine or localized behavior\n"
    ]
   },
   {
@@ -599,11 +599,11 @@
     "## Insights\n",
     "\n",
     "### 1.Mobility-Based Segmentation\n",
-    "Location entropy can be used to segment users into routine, semi-flexible, and highly mobile groups.\n",
+    "Location entropy can be used to segment users into routine, semi-flexible, and highly mobile groups\n",
     "\n",
     "### 2.Behavioral Change Detection\n",
     "Significant changes in entropy over time may indicate abnormal behavior, operational changes,\n",
-    "or external events affecting user mobility.\n"
+    "or external events affecting user mobility\n"
    ]
   },
   {
@@ -615,15 +615,15 @@
     "\n",
     "### 1.Personalized Mobility Services\n",
     "User segmentation based on location entropy can be used to personalize transport\n",
-    "recommendations and location-based services.\n",
+    "recommendations and location-based services\n",
     "\n",
     "### 2.Anomaly Detection\n",
     "Sudden changes in entropy can serve as signals for detecting fraud, device sharing,\n",
-    "or abnormal operational behavior.\n",
+    "or abnormal operational behavior\n",
     "\n",
     "### 3.Urban Planning\n",
     "Aggregated entropy metrics can help city planners identify highly dynamic regions\n",
-    "and optimize transportation infrastructure.\n"
+    "and optimize transportation infrastructure\n"
    ]
   },
   {
@@ -633,7 +633,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "This study demonstrates how location entropy can be used to quantify user mobility behavior in spatio-temporal data. Location entropy proves to be a valuable feature for mobility analysis, user segmentation, and data-driven product development."
+    "This study demonstrates how location entropy can be used to quantify user mobility behavior in spatio-temporal data. Location entropy proves to be a valuable feature for mobility analysis, user segmentation, and data-driven product development"
    ]
   },
   {
